--- a/src/style.css
+++ b/src/style.css
@@ -448,6 +448,13 @@ main .recent-orders a
     margin: 1rem auto;
     color: var(--color-primary);
 }
+/*
+    ===============================================================================
+    ===============================================================================
+    ===================================RIGHT SIDE==================================
+    ===============================================================================
+    ===============================================================================
+*/
 .right
 {
     margin-top: 1.4rem;
